# ChangeLog for app-pda/synce-librapi2
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-pda/cvs-repo/gentoo-x86/app-pda/synce-librapi2/Attic/ChangeLog,v 1.30 2009/01/21 11:43:48 mescalinum Exp $

  21 Jan 2009; Federico Ferri <mescalinum@gentoo.org>
  synce-librapi2-0.13.ebuild:
  better version handling

*synce-librapi2-0.13.1 (21 Jan 2009)

  21 Jan 2009; Federico Ferri <mescalinum@gentoo.org>
  +synce-librapi2-0.13.1.ebuild:
  version bump, fixes bug #255729

  21 Jan 2009; Federico Ferri <mescalinum@gentoo.org>
  synce-librapi2-0.13.ebuild:
  changing synce deps from ~atom-${PV} to =atom-${PV}*

*synce-librapi2-0.13 (21 Jan 2009)

  21 Jan 2009; Federico Ferri <mescalinum@gentoo.org>
  +synce-librapi2-0.13.ebuild:
  version bump, bug #254886

*synce-librapi2-0.12-r1 (19 Dec 2008)
*synce-librapi2-0.11.1-r1 (19 Dec 2008)

  19 Dec 2008; Federico Ferri <mescalinum@gentoo.org>
  -synce-librapi2-0.11.1.ebuild, +synce-librapi2-0.11.1-r1.ebuild,
  -synce-librapi2-0.12.ebuild, +synce-librapi2-0.12-r1.ebuild:
  depend on >=dev-python/pyrex-0.9.6 to solve some python RAPIError
  exceptions

*synce-librapi2-0.12 (13 Nov 2008)
*synce-librapi2-0.11.1 (13 Nov 2008)

  13 Nov 2008; Federico Ferri <mescalinum@gentoo.org>
  +synce-librapi2-0.11.1.ebuild, +synce-librapi2-0.12.ebuild:
  getting synce-0.12 into tree. ebuild coming from synce overlay, reviewed
  and tested.

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  synce-librapi2-0.9.1.ebuild:
  ppc stable, bug #193261

  24 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  synce-librapi2-0.9.1.ebuild:
  stable x86, bug 193261

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*synce-librapi2-0.9.2 (13 Jul 2006)

  13 Jul 2006; Alastair Tse <liquidx@gentoo.org>
  +synce-librapi2-0.9.2.ebuild:
  Version bump. (#135060)

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>