@@ -5,12 +5,12 @@ DIST librapi2-0.13.tar.gz 464076 RMD160 ac6793010bfb4dec7122522b7fd5d3d86128aaff
 DIST synce-librapi2-0.8.9.tar.gz 282486 RMD160 0ddba4fb41a3b835b64f90e662a5a0d8f1314435 SHA1 396b6639447ad8eb48ccee2a2ea497d4a5bc9e7a SHA256 6371a990e9e0cb8ba5c29b490de0bf0d1bc528d4da9c30f13adaf4ddf617a69a
 DIST synce-librapi2-0.9.1.tar.gz 386579 RMD160 a3cec3dd032fd5ded241267ed4599407c3b1e2ba SHA1 8eb8de894564da9f7f31808a6ff4e88db5ad0fc8 SHA256 cb2b8448f42ec536b552d0221a4449cf9608793976ffa0d9770b33f669ad9f66
 DIST synce-librapi2-0.9.2.tar.gz 404303 RMD160 7bf1014eb52d09a3707e60e7620db589dcc5f132 SHA1 57e68efe4daf3538babc1fcbc5ac3e8f39a1ff0b SHA256 7ba98dc2ecb9fc625aeeae25ca1c78849644e074d68725b2b8fcf0af8a6c5c3d
-EBUILD synce-librapi2-0.11.1-r1.ebuild 718 RMD160 69afb1a8b47e95463025bd3084a6bfc90fa2f7d4 SHA1 1cd748c7a2c46884a6ed76074eeeea14797f3aa1 SHA256 75d116e4aa433754d9e160a6628d2bb711682fb6202c9a2990cd66c5d191e563
-EBUILD synce-librapi2-0.12-r1.ebuild 777 RMD160 7e7156ef3f1fe88d853207f885d1c5f6810143f4 SHA1 0181fb81e8df47944cec354ac1b7ded9b05874b9 SHA256 ac8d530027bfe6a59ae7663357b943dd53768568ea4983bdd49bd7317ef16945
-EBUILD synce-librapi2-0.13.1.ebuild 861 RMD160 713ed6f6671c101a25ebaeddceb6490bb5f71896 SHA1 85f2681e6356a354344ce04efd994ee506b6104b SHA256 7ae8e0fefc3dbe7ce5429bcef0bc492cad5d44de1623e10a0fb4183d41d3748b
-EBUILD synce-librapi2-0.13.ebuild 859 RMD160 c638484ffd94cb1133b23f7821c3fc68f9f49e88 SHA1 2531c5e8d4a86ac9d3c75f838112368021c3be95 SHA256 35e5fdda285fb9d60cdc596c202199893d3e7406c47951e35293d852ce7d8dac
+EBUILD synce-librapi2-0.11.1-r1.ebuild 739 RMD160 20ab8b8aa05355bb21b5f18367b9c89b269d6c56 SHA1 35ca9a4d861bfed31ddb10512009351e1f579d60 SHA256 aa1e1df31386effd8448ec73135d2a11dc121318bc39236f41611da4861be72f
+EBUILD synce-librapi2-0.12-r1.ebuild 751 RMD160 a57cf346638093256d604b5c32dc7c0bd156a05e SHA1 b5206bba9ef4ea373817d5161a928e3706014ce8 SHA256 535717abb515d6b7c0b6708800b1618be93143da0a2fc1940139d753bebfdf6b
+EBUILD synce-librapi2-0.13.1.ebuild 815 RMD160 d2d679f00c68536529f95b2dcd9bd302c77564de SHA1 744f1c0dd25e6b700555ea6bf817f30d62ffb52e SHA256 0813f33b5b180491965571b4e9f3901c5a159c5e794d76c9920d0616b5dee07c
+EBUILD synce-librapi2-0.13.ebuild 813 RMD160 3ddeb8cdc42aa727ba770161e9cc549005c73ced SHA1 631489f439984a6e5ad655667e2bd7f1ef1b1903 SHA256 dd687d09e2e6ce8f1610911c79a97aa2d931b4629350b4c7ff5044e2f7ea832a
 EBUILD synce-librapi2-0.8.9.ebuild 710 RMD160 abe20aa6681d63c68b49e16a1a3e1414da2fc47a SHA1 302dc5ff6d53a3eadc78ffb2c9be568b06dbeeee SHA256 f9e699c341a60e94ba82ef0f3621aaa36a4562499fa937a79e2c831068f45e16
 EBUILD synce-librapi2-0.9.1.ebuild 643 RMD160 2c83fb88761ed90822202bc5fa1c1d2c5f39ea5b SHA1 4f67e764776fe95968c91ede3be5ca640578c834 SHA256 5ec0f986becbf8ec8a9e410745af1acdf826bab0620ca8b68134f754ab77530e
 EBUILD synce-librapi2-0.9.2.ebuild 670 RMD160 16f9bd52854a131d3c81a38a4dbee89099042d58 SHA1 a8dd943dba904bb1d1b340c32ae88ba3edc893c9 SHA256 b3ac0d30a39a36512afb7707cadbf80b3780ad499f14789f7ee322a3dd04fa12
-MISC ChangeLog 4090 RMD160 0762d9375406897d30ab69613374c49698aa51cf SHA1 dd1db0c4f81051b5d53ea7a7e4f46d01f74b0dea SHA256 43a3e6fb1c7fb5e009bd0fcd4db4c3b005027734a3df493fff550328ae3e6055
+MISC ChangeLog 4326 RMD160 484e9b4cebc51e8659fb25684713ec0fef691c20 SHA1 3f4d3a8885cc43d3abe355236fdcf7a3f49e2f22 SHA256 25d3e5da1205f448d5e40b869ab909ea42a1b3b442cba28a275b04b6080e528d
 MISC metadata.xml 404 RMD160 bbf147ad40d932fd80c717eaef6ab4f9e2d061d8 SHA1 9c5d4cf3491321a6efeea3c9ce9fddd0fb42f869 SHA256 583ad9fbd62df7be5947a6cdc1bb1cb6a8ac8cff7170b8bb22061b0c1962545d
