@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-pda/cvs-repo/gentoo-x86/app-pda/synce-librapi2/Attic/synce-librapi2-0.12-r1.ebuild,v 1.1 2008/12/19 22:07:20 mescalinum Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-pda/cvs-repo/gentoo-x86/app-pda/synce-librapi2/Attic/synce-librapi2-0.12-r1.ebuild,v 1.2 2009/01/24 12:34:55 mescalinum Exp $
 
 inherit eutils
 
@@ -15,16 +15,12 @@ DEPEND="dev-lang/python
 		>=dev-python/pyrex-0.9.6
 		>=dev-libs/check-0.8.2
 		~app-pda/synce-libsynce-0.12"
+RDEPEND="${DEPEND}"
 
 SRC_URI="mirror://sourceforge/synce/librapi2-${PV}.tar.gz"
 S="${WORKDIR}/librapi2-${PV}"
 
-src_compile() {
-	econf || die
-	emake || die
-}
-
 src_install() {
-	make DESTDIR="${D}" install || die
+	emake DESTDIR="${D}" install || die
 	dodoc BUGS README README.contributing README.design TODO ChangeLog
 }
