@@ -1,6 +1,11 @@
 # ChangeLog for app-pda/synce-librapi2
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-pda/cvs-repo/gentoo-x86/app-pda/synce-librapi2/Attic/ChangeLog,v 1.30 2009/01/21 11:43:48 mescalinum Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-pda/cvs-repo/gentoo-x86/app-pda/synce-librapi2/Attic/ChangeLog,v 1.31 2009/01/24 12:34:55 mescalinum Exp $
+
+  24 Jan 2009; Federico Ferri <mescalinum@gentoo.org>
+  synce-librapi2-0.11.1-r1.ebuild, synce-librapi2-0.12-r1.ebuild,
+  synce-librapi2-0.13.ebuild, synce-librapi2-0.13.1.ebuild:
+  fixed some QA stuff left behind when bumping version
 
   21 Jan 2009; Federico Ferri <mescalinum@gentoo.org>
   synce-librapi2-0.13.ebuild:
